feat: introduce scope-tracer-agent for zero-code-change tracing of StructuredTaskScope